--- a/discount_field.css
+++ b/discount_field.css
@@ -7,3 +7,8 @@ width: 150px;
 .field-type-discount-field-per-item div.fieldset-wrapper > div>span {
 padding: 0 16px;
 }
+span.discount-field-old-price {
+text-decoration: line-through;
+padding-right: 4px;
+opacity: 0.7;
+}
